WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
271097
fix darwin_arm_thread_state64 macro usage build issue
https://bugs.webkit.org/show_bug.cgi?id=271097
Summary
fix darwin_arm_thread_state64 macro usage build issue
bkayes
Reported
2024-03-15 18:11:57 PDT
resolves the build issue due to new macro usage in
rdar://124720658
Attachments
Add attachment
proposed patch, testcase, etc.
bkayes
Comment 1
2024-03-15 18:22:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25993
EWS
Comment 2
2024-03-15 19:18:21 PDT
Committed
276218@main
(b6c777aed6a8): <
https://commits.webkit.org/276218@main
> Reviewed commits have been landed. Closing PR #25993 and removing active labels.
WebKit Commit Bot
Comment 3
2024-03-18 14:50:59 PDT
Re-opened since this is blocked by
bug 271182
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug