fix darwin_arm_thread_state64 macro usage build issue https://bugs.webkit.org/show_bug.cgi?id=271097 rdar://124720658

Reviewed by Ryosuke Niwa.

these macros are not defined on watchos or simulators, so we can safely
ignore them.

* Source/JavaScriptCore/runtime/MachineContext.h:
(JSC::MachineContext::setInstructionPointer):

Canonical link: https://commits.webkit.org/276218@main